--- a/useCaseV1.html
+++ b/useCaseV1.html
@@ -6,6 +6,8 @@
 
     </head>
             <body>
+                <embed src="Esp32 Radio Controller.pdf" width="800px" height="2100px" />
+
                 <body style="background-color:rgb(204, 131, 35);"></body>
                 <h1>Use Cases for drones</h1>
                 <!--Use cases one-->
