--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </head>
             <body>
-                <embed src="Esp32 Radio Controller.pdf" width="800px" height="2100px" />
+                
 
                 <body style="background-color:rgb(204, 131, 35);"></body>
                 <h1>Use Cases for drones</h1>
@@ -45,5 +45,6 @@
                     4.Have button on control to activate fan when needed.<br>
                     5.Have button to deactivate fan.<br>
             </p>
+                <embed src="Esp32 Radio Controller.pdf" width="100%" height="2100px" />
             </body>
             </html>
