--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
                     5.Have button to deactivate fan.<br>
             </p>
                 <embed src="Esp32 Radio Controller.pdf" width="100%" height="2100px" />
+            <p>
+                <img src="MPU5060 diagram.jpg" alt="Mpu5060" width="500" height="600">
+             </p>
             </body>
             </html>
