--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     4.Have button on control to activate fan when needed.<br>
                     5.Have button to deactivate fan.<br>
             </p>
-                <embed src="Esp32 Radio Controller.pdf" width="100%" height="2100px" />
-            <p>
-                <img src="MPU5060 diagram.png" alt="Mpu5060" width="500" height="600">
-             </p>
+                <embed src="Esp32 Radio Controller.pdf" width="100%" height="2000px" />
+            
+                <img src="MPU5060 diagram.png" alt="Mpu5060" width="100%" height="600"/>
+             
             </body>
             </html>
