--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
                 <embed src="Esp32 Radio Controller.pdf" width="100%" height="2000px" />
             
-                <img src="MPU5060 diagram.png" alt="Mpu5060" width="100%" height="600"/>
+                <img src="MPU5060 diagram.jpg" alt="Mpu5060" width="100%" height="600"/>
              
             </body>
             </html>
